# xrpl-plugin

./: .cpp  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  conanfile.py  setup.py  test.py
.github/workflows/: python_docs.yml  test.yml  test_docker.yml
Builds/CMake/: PluginTransactorCov.cmake  PluginTransactorInterface.cmake
cpp/: CMakeLists.txt  README.md  conanfile.py
cpp/src/: DummyTx.cpp  DummyTx.h  EscrowCreate.cpp  EscrowCreate.h  SetTrust.cpp  SetTrust.h  TrustSet.cpp  TrustSet.h
cpp/tools/: CMakeLists.txt  DebugOutput.cpp  DebugSTypes.cpp  Test.cpp
javascript/: CMakeLists.txt  package-lock.json  package.json  transactor.js
javascript/plugin_src/: base.h  globals.h  transactor.cpp  utils.h
python/: .gitignore  .readthedocs.yaml  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  build.py  cmake_install.cmake  conanfile.py  pyproject.toml  rippled  rippled.cfg  setup.py  test.py  test_import.py
python/apex/: Dockerfile  auction.py  auction_bid.js  auction_bid.py  auction_create.js  auction_create.py  nftoken_escrow.js  nftoken_escrow.py  rippled.cfg  rippled_answer.cfg  rippled_bid.cfg  rippled_create.cfg  template.py  template_run.js
python/build_scripts/: CMakeLists.txt  build.py
python/cli/build_scripts/: CMakeLists.txt  build.py  conanfile.py
python/docs/: Makefile  conf.py  index.rst  make.bat  xrpl_plugin.keylets.rst  xrpl_plugin.ledger_objects.rst  xrpl_plugin.models.rst  xrpl_plugin.nfts.rst  xrpl_plugin.rst  xrpl_plugin.sfields.rst  xrpl_plugin.stypes.parser_errors.rst  xrpl_plugin.stypes.rst  xrpl_plugin.transactors.rst
python/docs/_build/: .buildinfo
python/docs/_build/.doctrees/: environment.pickle  index.doctree  xrpl_plugin.doctree  xrpl_plugin.return_codes.doctree  xrpl_plugin.sfields.doctree  xrpl_plugin.stypes.doctree  xrpl_plugin.stypes.parser_errors.doctree
python/docs/_build/doctrees/: environment.pickle  index.doctree  xrpl_plugin.basic_types.doctree  xrpl_plugin.keylets.doctree  xrpl_plugin.ledger_objects.doctree  xrpl_plugin.transactors.doctree
python/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  xrpl_plugin.basic_types.html  xrpl_plugin.keylets.html  xrpl_plugin.ledger_objects.html  xrpl_plugin.models.html  xrpl_plugin.nfts.html  xrpl_plugin.return_codes.html  xrpl_plugin.sfields.html  xrpl_plugin.stypes.html  xrpl_plugin.stypes.parser_errors.html  xrpl_plugin.transactors.html
python/docs/_build/html/_sources/: xrpl_plugin.basic_types.rst.txt  xrpl_plugin.return_codes.rst.txt
python/examples/: DummyTx.cpp  DummyTx.h  atomic_swap.py  dummy_tx.py  new_escrow_create.py  set_regular_key.py  token_swap.py  utils.py
python/examples/token_swap/: README.md  token_swap.py  token_swap_propose.py
python/proto_gen/src/ripple/proto/: ripple.pb.cc
python/proto_gen_grpc/ripple/proto/org/xrpl/rpc/v1/: get_ledger.grpc.pb.cc  get_ledger.pb.cc  get_ledger_data.grpc.pb.cc  get_ledger_data.pb.cc  get_ledger_diff.grpc.pb.cc  get_ledger_diff.pb.cc  get_ledger_entry.grpc.pb.cc  get_ledger_entry.pb.cc  ledger.grpc.pb.cc  ledger.pb.cc  xrp_ledger.grpc.pb.cc  xrp_ledger.pb.cc
python/src/: lib.cpp  main.cpp
python/subproject/rippled/: Makefile  RippleConfigVersion.cmake  cmake_install.cmake
python/subproject/rippled/src/ed25519-donna/: Makefile  cmake_install.cmake
python/subproject/rippled/src/secp256k1/: Makefile  cmake_install.cmake
python/test/: DummyTx.cpp  dummy_tx.py
python/tools/: sfields.py
python/xrpl_plugin/: __init__.py  basic_types.py  keylets.py  ledger_objects.py  models.py  nfts.py  return_codes.py  rippled  sfields.py  stypes.py  transactors.py  utils.py
python/xrpl_plugin/build_scripts/: CMakeLists.txt  __init__.py  build_cli.py  conanfile.py
python/xrpl_plugin/stypes/: __init__.py  parser_errors.py
rust/: Cargo.toml  build.rs
rust/crates/dummy_tx/: Cargo.toml
rust/crates/dummy_tx/src/: lib.rs
rust/crates/plugin-transactor/src/: lib.rs  transactor.rs
rust/crates/rippled-bridge/: Cargo.toml  build.rs
rust/crates/rippled-bridge/include/: rippled_api.h
rust/crates/rippled-bridge/src/: dummy_tx_rs.rs  lib.rs  rippled_api.cpp
rust/include/: blobstore.h  rippled_api.h
rust/playground/: Cargo.toml
rust/playground/src/: main.rs
rust/src/: blobstore.cpp  dummy_tx_rs.rs  lib.rs  main.rs  rippled_api.cpp
src/: lib.cpp  main.cpp  main.h  pylib.cpp
src/src/: lib.cpp
