[tool.poetry]
name = "xrpl-plugin"
version = "0.2.3"
description = "A Python package for writing plugins for XRPL nodes."
readme = "README.md"
repository = "https://github.com/mvadari/xrpl-plugin"
authors = [
  "Mayukha Vadari <mvadari@ripple.com>"
]
keywords = [
  "xrp",
  "xrpl",
  "cryptocurrency",
  "web3",
  "extensibility"
]
license = "ISC"
documentation = "https://xrpl-plugin.readthedocs.io"
include = [
  "LICENSE",
]
packages = [
  { include = "xrpl_plugin" },
]

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.12",
    "pybind11~=2.10.4",
    "conan<2",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.mypy]
files = "setup.py"
python_version = "3.10"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["ninja"]
ignore_missing_imports = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["tests"]

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
# Setuptools bug causes collision between pypy and cpython artifacts
before-build = "rm -rf {project}/build"
